Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126221

B2Qt Application crashes

XMLWordPrintable

    • All
    • 0a10d23c4 (dev), aca3b9570 (6.8)

      sha 084ec5054cb7adad4aea6de3d9247b53eade1901
      HW smoke
      Crashes on Tier1 targets except linux-g++-Ubuntu22.04-x64-imx93-11x11-lpddr4x-evk
      lineedits application unexpectedly stopped
      Application crashed: /usr/bin/localfortuneclient
      Application crashed: /usr/share/examples/widgets/widgets/analogclock/analogclock
      https://testrail.qt.io/index.php?/plans/view/550857
      example testrun https://qt-rta-new.ci.qt.io/job/RTA_b2qtHW_smoke_68_onwards/cfg=linux-g++-Ubuntu22.04-x64-apalis-imx6/24/console

      Highlighted examples
      Application crashed: /usr/bin/localfortuneclient
      Application crashed: /usr/bin/localfortuneserver
      Application crashed: /usr/examples/multimedia/camera/camera
      Application crashed: /usr/examples/multimedia/player/player
      Application crashed: /usr/bin/http
      Application crashed: /usr/bin/imagescaling
      https://testrail.qt.io/index.php?/plans/view/550941
      https://qt-rta-new.ci.qt.io/job/RTA_b2qtHW_highlighted_examples_68_onwards/cfg=linux-g++-Ubuntu22.04-x64-imx8qm-mek/6/consoleFull

      Compared to previous testruns similar crashes didn't happen
      sha df5ae777a4a526a7d5cd0b7ec2f6ca77e5dd0a9f
      29/05/2024 https://testrail.qt.io/index.php?/plans/view/546415
      https://qt-rta-new.ci.qt.io/job/RTA_b2qtHW_smoke_68_onwards/cfg=win-Windows10-22H2-x64-apalis-imx6/18/

      HW tests
      Application crashed: /usr/bin/analogclock
      Application crashed: /usr/bin/quickapp
      tst_build_with_qmake_via_cli: qmakewidget application unexpectedly stopped
      tst_build_with_cmake_via_cli: cmakewidget application unexpectedly stopped

        For Gerrit Dashboard: QTBUG-126221
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            mierala Minna Erälä
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes